[tool.poetry]
name = "fastapi_actuator"
version = "0.1.0"
description = "A monitoring and management plugin for Fastapi inspired by Spring Boot Actuator."
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
